# hr-resume-screener

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
app/: agent_workflow.py  data_ingestion.py  vector_db.py
